tests/test_data/istio/expected/networking.istio.io/v1beta1/Gateway/hook.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hook
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - hook-jx.mydomain.com
    port:
      name: http
      number: 80
      protocol: HTTP
