tests/test_data/istio/expected/networking.istio.io/v1beta1/Gateway/nexus.yaml
# Source: jxboot-helmfile-resources/templates/700-nexus-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nexus
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - nexus-jx.mydomain.com
    port:
      name: http
      number: 80
      protocol: HTTP
